2012-01-13  Albert Chu <chu11@llnl.gov>

	* Audit and add asserts appropriately to large number of functions.

	* common/configtool/: All config tools support hostranges, so
	replace PSTDOUT_PRINTF with pstdout_printf, PSTDOUT_FPRINTF with
	pstdout_fprintf, and PSTDOUT_PERROR with pstdout_perror.
	
2012-01-13  Albert Chu <chu11@llnl.gov>

	* doc/solstatediagram.dot: SOL State Diagram documentation.
	
2012-01-13  Albert Chu <chu11@llnl.gov>

	* libipmiconsole/ipmiconsole_processing.c
	(_process_protocol_state_deactivate_payload_sent): Fix deactivate
	only corner case in which session not closed cleanly.
	
2012-01-12  Albert Chu <chu11@llnl.gov>

	Merge branch redotemplatedocs

	* libfreeipmi/include/freeipmi/templates/: Redo format.  Update
	OEM motherboard lists.

	*
	libfreeipmi/include/record-format/ipmi-oem-intel-node-manager-cmds.h:
	Update motherboard list.

	* libfreeipmi/: Clean up some comments in various files.
	
2012-01-12  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/sensor-read/ipmi-sensor-read.c
	(_sensor_reading_corner_case_checks): Handle corner case in Sun
	Blade 6000M2.
	
2012-01-11  Albert Chu <chu11@llnl.gov>

	Merge sunbladex6250sensor branch

	* libfreeipmi/sensor-read/ipmi-sensor-read.c
	(_sensor_reading_corner_case_checks): Handle corner case in Sun
	Blade x6250.

	* libfreeipmi/sensor-read/ipmi-sensor-read.c
	(_sensor_reading_corner_case_checks): Slightly alter error code
	return interpretations.
	
2012-01-10  Albert Chu <chu11@llnl.gov>

	* common/toolcommon/tool-config-file-common.c: Fix several config
	file option parsing bugs.
	
2012-01-10  Albert Chu <chu11@llnl.gov>

	* doc/freeipmi-faq.texi: Add conman configuration FAQ example.
	Add terminology, ganglia, nagios info.

2012-01-09  Albert Chu <chu11@llnl.gov>

	* doc/freeipmi-faq.texi: Add powerman configuration FAQ example.
	
2012-01-09  Albert Chu <chu11@llnl.gov>

	* Merge 8250:8352 ipmioemdellgetsysteminfo.

	* ipmi-oem/ipmi-oem-dell.c: Add Dell get-system-info