@@ -520,7 +520,7 @@ Serial-Over-LAN Issue #5: [COMPLIANCE]
   Resolution: Code added to error after a number of failed deactivations.
 
   Notes: Confirmed fixed in newer firmware for Supermicro H8QME with
-  SIMSO daughter card.
+  SIMSO daughter card.  This is similar to issue #17 below.
 
 Serial-Over-LAN Issue #6: [COMPLIANCE]
 
@@ -653,6 +653,38 @@ Serial-Over-LAN Issue #15: [COMPLIANCE]
   Seen on: MSI MS-91D2
 
   Resolution: None
+
+Serial-Over-LAN Issue #16: [COMPLIANCE]
+
+  The number of SOL payload instances that can simultaneously be
+  activated on a motherboard is always reported as 0, suggesting that
+  it cannot be activated.
+
+  Seen on: Dell Poweredge M605, Dell Poweredge M610, Dell Poweredge
+  M915
+
+  Resolution: Workaround added to assume the instance capacity is
+  really 1 when it is 0.  The assumption is made that the vendor does
+  not support multiple instances, which is why it is reported as 0.
+
+Serial-Over-LAN Issue #17: [COMPLIANCE] or [IMPLEMENTATION]
+
+  SOL sessions are not deactivated after a Deactivate Payload request.
+  Despite the SOL session being active, it appears the BMC does not
+  know it is activated, and returns "Payload already deactivated"
+  (0x80) completion code.  This could lead to a loop that continually
+  believes a SOL session is activated when calling Activate Payload,
+  and deactivated when calling Deactivate Payload.
+  
+  Seen on: Dell Poweredge M605, Dell Poweredge M610, Dell Poweredge
+  M915
+
+  Notes: It is possible the Dell BMC does not allow a SOL payload
+  deactivation except for the IPMI session that activated the SOL
+  payload.  While deactivation of a payload from another IPMI session
+  is allowed in IPMI (see Table 15-2 [2]), I am not sure if it is
+  required.  So I'm listing this as [COMPLIANCE] or [IMPLEMENTATION].
+  This is similar to issue #5 above.
 
 ----------------------------------------------------------------------
 
